FIX: Suggest PW font size and alignment

--- a/frontend/src/Components/SignUp/SignUp.css
+++ b/frontend/src/Components/SignUp/SignUp.css
@@ -5,7 +5,8 @@
 .suggestPwPosition {
    position: absolute;
    right: 7%;
-   top: 15px;
+   top: 12px;
+   font-size: 12px;
 }
 
 .no-arrow {
